<resources>

	<!-- Application -->
	<string name="app_name">Location Sharing</string>

	<!-- Global -->
	<string name="global_button_back">Back</string>
	<string name="global_button_continue">Continue</string>

	<!-- Setup Activity -->
	<string name="setup_text_title">Let\'s get started</string>
	<string name="setup_text_account">If this is your first time using this app then you should begin by registering a new account. If you have used this app before, then you should login to your existing account.</string>
	<string name="setup_text_guest">If you are participating in an event or field trip, or would simply prefer a temporary account, then you should continue as a guest.</string>
	<string name="setup_button_register">Register a new account</string>
	<string name="setup_button_login">Login to an existing account</string>
	<string name="setup_button_guest">Continue as a guest</string>
	<string name="setup_button_server">Switch server instance</string>

	<!-- Login Activity -->
	<string name="login_text_title">Login to your account</string>
	<string name="login_text_description">Login to your existing account below to continue.</string>
	<string name="login_text_name"><b>Display Name</b> or <b>Email Address</b>:</string>
	<string name="login_text_password">Password:</string>
	<string name="login_text_forgotpassword"><u>Forgot your password?</u></string>
	<string name="login_checkbox_remember">Remember me for 30 days?</string>
	<string name="login_button_login">Login</string>

	<!-- Server Activity -->
	<string name="server_text_title">Switch server instance</string>
	<string name="server_text_notice">This section of the app is for advanced users, if you do not know what you are doing then press back to return to the previous section.</string>
	<string name="server_text_description">As this app is open-source, anyone can host their own instance of the official API service. This is often desirable for organisations that wish to keep their data on-site, or even privacy-conscious friend groups and families.</string>
	<string name="server_text_url">Server Base URL:</string>
	<string name="server_text_secure">The server TLS certificates is validated using the device certificate store, so any custom root certificates should be installed there.</string>
	<string name="server_text_status_success">The server (running version %s) is working as expected.\n\nYour server has been switched.</string>
	<string name="server_text_status_failure">There was an issue communicating with the server (%s).\n\nYour server has not been switched.</string>
	<string name="server_button_switch">Switch</string>

</resources>
