<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/setupConstraintLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".SetupActivity">

	<TextView
		android:id="@+id/setupTitleTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="80dp"
		android:layout_marginTop="15dp"
		android:layout_marginEnd="80dp"
		android:text="@string/setup_text_title"
		android:textAlignment="center"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/setupTitleDivider"
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:layout_marginStart="30dp"
		android:layout_marginTop="15dp"
		android:layout_marginEnd="30dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/setupTitleTextView" />

	<TextView
		android:id="@+id/setupAccountTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="50dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="50dp"
		android:text="@string/setup_text_account"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/setupTitleDivider" />

	<Button
		android:id="@+id/setupLoginButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginTop="15dp"
		android:layout_marginEnd="30dp"
		android:text="@string/setup_button_login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/setupRegisterButton" />

	<Button
		android:id="@+id/setupRegisterButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="30dp"
		android:text="@string/setup_button_register"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/setupAccountTextView" />

	<TextView
		android:id="@+id/setupGuestTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="50dp"
		android:layout_marginTop="80dp"
		android:layout_marginEnd="50dp"
		android:text="@string/setup_text_guest"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/setupLoginButton" />

	<Button
		android:id="@+id/setupGuestButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="30dp"
		android:text="@string/setup_button_guest"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/setupGuestTextView" />

	<Button
		android:id="@+id/setupServerButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginEnd="30dp"
		android:layout_marginBottom="15dp"
		android:text="@string/setup_button_server"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
