<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mainConstraintLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LoginActivity">

	<TextView
		android:id="@+id/serverTitleTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_title"
		android:layout_marginTop="@dimen/dimension_top"
		android:layout_marginEnd="@dimen/dimension_side_title"
		android:text="@string/login_text_title"
		android:textAlignment="center"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/serverTitleDivider"
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:layout_marginStart="@dimen/dimension_side_divider"
		android:layout_marginTop="@dimen/dimension_top_divider"
		android:layout_marginEnd="@dimen/dimension_side_divider"
		android:background="?android:attr/listDivider"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/serverTitleTextView" />

	<TextView
		android:id="@+id/serverNoticeTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_text"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="@dimen/dimension_side_text"
		android:text="@string/login_text_description"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/serverTitleDivider" />

	<TextView
		android:id="@+id/mainNameTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_control"
		android:layout_marginEnd="@dimen/dimension_side_control"
		android:labelFor="@id/mainNameEditText"
		android:text="@string/login_text_name"
		android:textAlignment="textStart"
		app:layout_constraintBottom_toTopOf="@+id/mainNameEditText"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<EditText
		android:id="@+id/mainNameEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_control"
		android:layout_marginTop="50dp"
		android:layout_marginEnd="@dimen/dimension_side_control"
		android:autofillHints=""
		android:ems="10"
		android:inputType="textPersonName"
		android:minHeight="48dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/serverNoticeTextView"
		tools:ignore="DuplicateSpeakableTextCheck" />

	<TextView
		android:id="@+id/mainPasswordTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_control"
		android:layout_marginEnd="@dimen/dimension_side_control"
		android:labelFor="@id/mainPasswordEditText"
		android:text="@string/login_text_password"
		android:textAlignment="textStart"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/mainPasswordEditText"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<EditText
		android:id="@+id/mainPasswordEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_control"
		android:layout_marginTop="50dp"
		android:layout_marginEnd="@dimen/dimension_side_control"
		android:autofillHints=""
		android:ems="10"
		android:inputType="textPassword"
		android:minHeight="48dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mainNameEditText"
		tools:ignore="DuplicateSpeakableTextCheck" />

	<TextView
		android:id="@+id/mainPasswordHelpTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_control"
		android:layout_marginEnd="@dimen/dimension_side_control"
		android:text="@string/login_text_forgotpassword"
		android:textAlignment="textEnd"
		android:textColor="@color/blue_300"
		android:textStyle="italic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mainPasswordEditText" />

	<CheckBox
		android:id="@+id/mainRememberCheckBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_control"
		android:layout_marginTop="60dp"
		android:layout_marginEnd="@dimen/dimension_side_control"
		android:checked="true"
		android:text="@string/login_checkbox_remember"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mainPasswordEditText" />

	<Button
		android:id="@+id/mainBackButton"
		android:layout_width="@dimen/dimension_width_button_back"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_side_control"
		android:layout_marginBottom="@dimen/dimension_bottom"
		android:text="@string/global_button_back"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/mainLoginButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimension_left_button_back"
		android:layout_marginEnd="@dimen/dimension_side_control"
		android:layout_marginBottom="@dimen/dimension_bottom"
		android:text="@string/login_button_login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/mainBackButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
